--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,5 @@
 @import "scores";
 
 body {
-  margin: 10px;
-
   @include outer-container;
 }
